tests/error/02_string.py
# Unterminated string
# Parser Error: Unable to parse at line=1 col=1.
a: str = "
